# physical_ai_robotics_system

./: .gitignore  README.md
bt_xml/: pick_and_place.xml
configs/: moveit_targets.yaml
docs/: architecture.md  architecture_diagram.md  demo_plan.md  future_work.md  interview_talking_points.md  llm_planner_safety.md  moveit_architecture.md  moveit_demo_setup.md  physical_ai_architecture.md  project_overview.md  resume_bullets.md  roadmap.md  testing.md
examples/: openai_planner_output_examples.md  task_plan_schema.json  task_prompts.md
ros2_ws/src/pai_bt_executor/: package.xml  setup.cfg  setup.py
ros2_ws/src/pai_bt_executor/pai_bt_executor/: bt_executor_node.py  mock_bt_executor_node.py
ros2_ws/src/pai_bt_executor_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/pai_bt_executor_cpp/src/: bt_executor_node.cpp
ros2_ws/src/pai_llm_planner/: package.xml  setup.cfg  setup.py
ros2_ws/src/pai_llm_planner/pai_llm_planner/: mock_llm_planner_node.py  planner_node.py  planners.py  task_plan_builder.py  task_schema.py
ros2_ws/src/pai_moveit_interface/: package.xml  setup.cfg  setup.py
ros2_ws/src/pai_moveit_interface/pai_moveit_interface/: moveit_interface_node.py
ros2_ws/src/pai_moveit_interface_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/pai_moveit_interface_cpp/include/pai_moveit_interface_cpp/: gripper_controller.hpp  motion_planner.hpp  robot_action_server.hpp
ros2_ws/src/pai_moveit_interface_cpp/src/: gripper_controller.cpp  motion_planner.cpp  robot_action_server.cpp
ros2_ws/src/pai_robot_actions/: package.xml  setup.cfg  setup.py
ros2_ws/src/pai_robot_actions/pai_robot_actions/: robot_actions_node.py
ros2_ws/src/pai_sim_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/pai_sim_bringup/launch/: demo.launch.py  mock_bt_cpp_demo.launch.py  mock_demo.launch.py  moveit_robot_action_demo.launch.py  robot_action_demo.launch.py
ros2_ws/src/pai_task_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/pai_task_msgs/msg/: RobotAction.msg  TaskPlan.msg  TaskStatus.msg  TaskStep.msg
ros2_ws/src/pai_task_msgs/srv/: ExecuteRobotAction.srv
scripts/: check_all.sh  check_bt_xml.sh  check_docs.sh  check_python.sh
