<?xml version="1.0"?>
<package format="3">
  <name>pai_bt_executor</name>
  <version>0.0.0</version>
  <description>Placeholder BehaviorTree.CPP execution package.</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>pai_task_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
